Updated the gulp scrips

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="tthew.app" ng-cloak>
+<html lang="en" ng-app="app" ng-cloak>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Plex Landing</title>
