Added webpack config, fixed some client stuff

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,9 +9,8 @@
         <ui-view></ui-view>
     </div>
 
-    {% for (var chunk in o.htmlWebpackPlugin.assets) { %}
-      <script src="{%=o.htmlWebpackPlugin.assets[chunk]%}"></script>
+    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
+    <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
     {% } %}
   </body>
-  <!-- {%= o.htmlWebpackPlugin.options.pkg.name + ' v' + o.htmlWebpackPlugin.options.pkg.version + ' built on ' + new Date() %} -->
 </html>
