--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-cloak>
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Plex Landing</title>
+    <title ng-bind="title">Plex Landing</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   </head>
+
   <body class="">
+
     <div class="">
         <ui-view></ui-view>
     </div>
 
-    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
-    <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
-    {% } %}
+    
   </body>
 </html>
