--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app" ng-cloak>
+<html lang="en" ng-app="app" ng-cloak ng-strict-diiiiii>
   <head>
-    <title ng-bind="title">Plex Landing</title>
+    <base href="/">
+    <title>Fullstack</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
@@ -13,6 +14,6 @@
         <ui-view></ui-view>
     </div>
 
-    
+
   </body>
 </html>
